# chords

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md
.github/workflows/: codeql.yml  deploy.yml
assets/: main.css  tailwind.css
src/: main.rs
