[package]
name = "chords"
version = "0.1.0"
authors = ["luna"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
dioxus = { version = "0.7.3", features = [] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
rand = "0.9.2"
rust-music-theory = "0.3.0"
strum = { version = "0.27.2", features = ["derive"] }
wasm-bindgen = "0.2"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.release]
codegen-units = 1
lto = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
